--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -49,7 +49,7 @@
   background-color: #272d9c;
 }
 #navbar-scrollspy ul li .active .color3 {
-  background-color: #fe7373;
+  background-color: #80d4f6;
 }
 #navbar-scrollspy ul li .active .color4 {
   background-color: #eab5ff;
@@ -58,10 +58,10 @@
   background-color: darkviolet;
 }
 #navbar-scrollspy ul li .active .color6 {
-  background-color: #5f8bfa;
+  background-color: #4d58cb;
 }
 #navbar-scrollspy ul li .active .color7 {
-  background-color: #666666;
+  background-color: darkviolet;
 }
 #navbar-scrollspy ul li .active .color8 {
   background-color: #d2ff1f;
