--- a/my_project/my_portfolio/css/portfolio.css
+++ b/my_project/my_portfolio/css/portfolio.css
@@ -4,7 +4,19 @@
 }
 @font-face {
   font-family: "Noto";
-  src: url(../../font/Noto_Sans_KR/NotoSansKR-Light.otf);
+  src: url(../../font/Noto_Sans_KR/NotoSansKR-Regular.otf);
+}
+@font-face {
+  font-family: "Kungfu";
+  src: url(../../font/KungFu/KungFuMasterLeftalic-nRjBV.otf);
+}
+@font-face {
+  font-family: "Dongle";
+  src: url(../../font/Dongle/Dongle-Bold.ttf);
+}
+@font-face {
+  font-family: "Robo";
+  src: url(../../font/Roboto/Roboto-BoldItalic.ttf);
 }
 
 video {
@@ -17,7 +29,7 @@ video {
   overflow: hidden;
 }
 [class*="port"] h2 {
-  font-family: "Mont";
+  font-family: "Kungfu";
   font-size: 4vw;
 }
 [class*="port"] .item-box {
@@ -26,28 +38,65 @@ video {
 }
 [class*="port"] .item-box .text-box {
   position: relative;
-  font-family: "Noto";
   width: 25vw;
-  height: 50vh;
+  height: 55vh;
   margin: 3vw;
 }
 [class*="port"] .item-box .text-box h3 {
-  font-size: 2vw;
+  font-family: "Dongle";
+  font-size: 4vw;
   margin-bottom: 5vh;
 }
 [class*="port"] .item-box .text-box p {
+  font-family: "Noto";
   font-size: 1.2vw;
-  margin-bottom: 4vh;
+  margin-bottom: 3.5vh;
 }
-[class*="port"] .item-box .text-box button {
+
+[class*="port"] .item-box .text-box .link-box {
   position: absolute;
-  font-size: 1.5vw;
+  cursor: pointer;
+  width: 5vw;
+  height: 2.5vw;
   left: 0;
   bottom: 0;
+  overflow: hidden;
+}
+[class*="port"] .item-box .text-box .link-box p {
+  font-family: "Robo";
+  font-size: 1.5vw;
+  margin: 0 auto 0 0.4vw;
+}
+[class*="port"] .item-box .text-box .link-box .hover-bar {
+  position: absolute;
+  left: -100%;
+  width: 100%;
+  height: 0.1vw;
+  transition: 0.2s;
+}
+[class*="port"] .item-box .text-box .link-box:hover .hover-bar {
+  transform: translateX(100%);
+}
+.port1 .item-box .text-box .link-box .hover-bar,
+.port3 .item-box .text-box .link-box .hover-bar {
+  background-color: darkviolet;
+}
+.port2 .item-box .text-box .link-box .hover-bar {
+  background-color: #4d58cb;
 }
 
 .port2 .item-box .text-box {
   margin-top: 8vh;
+}
+
+.port1 {
+  background-color: aliceblue;
+}
+.port2 {
+  background-color: azure;
+}
+.port3 {
+  background-color: aliceblue;
 }
 
 [class*="port"] [class*="deco"] {
@@ -57,33 +106,38 @@ video {
   border-radius: 10vw;
 }
 .port1 .deco1 {
-  background: linear-gradient(rgb(207, 0, 211) 50%, darkviolet);
+  background-color: darkviolet;
+  /* background: linear-gradient(rgb(207, 0, 211) 50%, darkviolet); */
   top: -10vw;
   right: -10vw;
 }
 .port1 .deco2 {
-  background: linear-gradient(darkviolet, rgb(131, 0, 133) 50%);
+  background-color: darkviolet;
+  /* background: linear-gradient(darkviolet, rgb(131, 0, 133) 50%); */
   bottom: -10vw;
   left: -10vw;
 }
 .port2 .deco1 {
-  background: linear-gradient(rgb(0, 149, 255) 50%, blue);
-  background-color: blue;
+  background-color: #4d58cb;
+  /* background: linear-gradient(rgb(0, 149, 255) 50%, blue); */
   top: -10vw;
   right: -10vw;
 }
 .port2 .deco2 {
-  background: linear-gradient(rgb(0, 140, 255), blue 50%);
+  background-color: #4d58cb;
+  /* background: linear-gradient(rgb(0, 140, 255), blue 50%); */
   bottom: -10vw;
   left: -10vw;
 }
 .port3 .deco1 {
-  background: linear-gradient(rgb(148, 0, 211) 50%, rgb(167, 1, 120));
+  background-color: darkviolet;
+  /* background: linear-gradient(rgb(148, 0, 211) 50%, rgb(167, 1, 120)); */
   top: -10vw;
   left: -10vw;
 }
 .port3 .deco2 {
-  background: linear-gradient(rgb(126, 1, 91), rgb(167, 1, 120) 50%);
+  background-color: darkviolet;
+  /* background: linear-gradient(rgb(126, 1, 91), rgb(167, 1, 120) 50%); */
   bottom: -10vw;
   right: -10vw;
 }
