--- a/my_project/my_portfolio/css/skill.css
+++ b/my_project/my_portfolio/css/skill.css
@@ -18,30 +18,38 @@
 }
 .skill h2 {
   font-family: "Mont";
+  font-weight: bold;
   font-size: 5vw;
+  margin-bottom: 8vh;
 }
 
-.skill .text-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  height: 70vh;
+.skill .big-item-box {
+  position: relative;
 }
-.skill .text-box .item-box {
-  width: 60vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.skill .big-item-box .item1,
+.skill .big-item-box .item3 {
+  float: left;
 }
-.skill .text-box p {
+.skill .big-item-box .item2 {
+  float: right;
+}
+.skill .item-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 6vh;
+}
+.skill .item-box .text-box {
+  margin-right: 5vw;
+}
+.skill p {
   font-family: "Noto";
   font-size: 1.5vw;
 }
 .skill .img-box img {
   margin: 0 1vw;
-  width: 8vw;
-  height: 8vw;
+  width: 6vw;
+  height: 6vw;
 }
 
 .skill button {
