--- a/my_project/my_portfolio/css/mindSet.css
+++ b/my_project/my_portfolio/css/mindSet.css
@@ -32,13 +32,15 @@
   font-family: "Hero";
   font-size: 6vw;
   font-weight: bold;
+  text-shadow: 0.5vw 0.5vw 0 #333333;
 }
 .mind .content {
   position: relative;
   width: 60vw;
   height: 55vh;
+  border-radius: 2vw;
   margin: 3vh auto 3vh auto;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.03);
 }
 .mind .content .text-box {
   position: absolute;
@@ -47,6 +49,7 @@
   right: 3vw;
   transition: 0.5s;
   text-align: left;
+  text-shadow: 0.1vw 0.1vw 0.2vw #333333;
 }
 .mind .content .text-box h3,
 .mind .content .text-box p {
