update my portfolio
add bubble background animation in skill section /
add fonts /
other details

--- a/my_project/my_portfolio/css/mindSetBack.css
+++ b/my_project/my_portfolio/css/mindSetBack.css
@@ -43,6 +43,7 @@
   -webkit-animation-duration: 5s;
   animation-iteration-count: infinite;
   -webkit-animation-iteration-count: infinite;
+  filter: blur(0.1vw);
 }
 .mind .floating.circle {
   display: inline-block;
