--- a/my_project/my_portfolio/css/header.css
+++ b/my_project/my_portfolio/css/header.css
@@ -3,7 +3,7 @@
   src: url(../../font/KungFu/KungFuMasterLeftalic-nRjBV.otf);
 }
 
-.header-nav {
+.header-box {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,12 +15,12 @@
   color: white;
   z-index: 200;
 }
-.header-nav h2 {
+.header-box h2 {
   padding: 0 0 0 5vw;
   margin: 0;
   font-size: 1.5vw;
 }
-.header-nav .ani-block {
+.header-box .ani-block {
   position: absolute;
   top: 50%;
   left: 2vw;
@@ -31,32 +31,42 @@
   animation-duration: 4s;
   animation-iteration-count: infinite;
 }
-.header-nav .ani1 {
+.header-box .ani1 {
   animation-name: one;
 }
-.header-nav .ani2 {
+.header-box .ani2 {
   animation-name: two;
 }
-.header-nav .ani3 {
+.header-box .ani3 {
   animation-name: three;
 }
-.header-nav .ani4 {
+.header-box .ani4 {
   animation-name: four;
 }
-.header-nav .ani5 {
+.header-box .ani5 {
   animation-name: five;
 }
-.header-nav ul {
+.header-box ul {
   list-style: none;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 5vw 0 0;
 }
-.header-nav ul li {
+.header-box ul li {
   width: 8vw;
   font-size: 1vw;
   padding: 0;
+}
+
+.header-box .header-nav {
+  display: flex;
+  width: 35vw;
+  justify-content: space-around;
+  text-align: center;
+}
+.header-box .header-nav li {
+  cursor: pointer;
 }
 
 .header .text-box {
