--- a/my_project/my_portfolio/css/skill.css
+++ b/my_project/my_portfolio/css/skill.css
@@ -10,6 +10,129 @@
 .skill {
   overflow: hidden;
 }
+
+.skill .shapes {
+  list-style: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+}
+
+.skill .shapes .big-circle {
+  position: absolute;
+  left: -5%;
+  top: 30%;
+  width: 40vw;
+  height: 40vw;
+  border-radius: 20vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 3s infinite alternate;
+}
+.skill .shapes .big-circle .inner-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30vw;
+  height: 30vw;
+  border-radius: 15vw;
+  background-color: white;
+}
+.skill .shapes .small-circle {
+  position: absolute;
+  left: 65%;
+  top: 20%;
+  width: 20vw;
+  height: 20vw;
+  border-radius: 10vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 2s infinite alternate;
+}
+.skill .shapes .small-circle .inner-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 15vw;
+  height: 15vw;
+  border-radius: 7.5vw;
+  background-color: white;
+}
+.skill .shapes .small-circle2 {
+  position: absolute;
+  left: 55%;
+  top: 62%;
+  width: 12vw;
+  height: 12vw;
+  border-radius: 6vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 2.3s infinite alternate;
+}
+.skill .shapes .small-circle2 .inner-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 8vw;
+  height: 8vw;
+  border-radius: 4vw;
+  background-color: white;
+}
+.skill .shapes .triangle {
+  position: absolute;
+  top: 75%;
+  left: 84%;
+  width: 4vw;
+  height: 4vw;
+  background-image: url(../img/green_tri.png);
+  background-size: cover;
+  background-position: center;
+  animation: bubble 2.2s infinite alternate;
+}
+.skill .shapes .circle1 {
+  position: absolute;
+  top: 85%;
+  left: 77%;
+  width: 3vw;
+  height: 3vw;
+  border-radius: 1.5vw;
+  background-color: rgb(71, 77, 168);
+  animation: bubble 3.5s infinite alternate;
+}
+.skill .shapes .circle2 {
+  position: absolute;
+  top: 15%;
+  left: 32%;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 1vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 3s infinite alternate;
+}
+.skill .shapes .circle3 {
+  position: absolute;
+  top: 18%;
+  left: 62%;
+  width: 4vw;
+  height: 4vw;
+  border-radius: 2vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 2.1s infinite alternate;
+}
+.skill .shapes .circle4 {
+  position: absolute;
+  top: 85%;
+  left: 45%;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 1vw;
+  background-color: rgba(41, 53, 220, 0.05);
+  animation: bubble 1.1s infinite alternate;
+}
+
 .skill .skill-inner {
   position: absolute;
   width: 80%;
@@ -19,39 +142,87 @@
 .skill h2 {
   font-family: "Mont";
   font-weight: bold;
-  font-size: 5vw;
+  font-size: 6vw;
   margin-bottom: 8vh;
 }
 
 .skill .big-item-box {
   position: relative;
+  width: 80vw;
+  height: 60vh;
 }
-.skill .big-item-box .item1,
-.skill .big-item-box .item3 {
-  float: left;
+
+.skill .item-box {
+  position: absolute;
+  border-radius: 0.5vw;
+  background-color: white;
+  box-shadow: 0.05vw 0.05vw 0.2vw #333333;
+  overflow: hidden;
+}
+.skill .item-box:hover {
+  box-shadow: 0.05vw 0.05vw 0.4vw #333333;
+}
+.skill .big-item-box .item1 {
+  left: 0%;
+  top: 40%;
+  animation: bubble 5s infinite alternate;
 }
 .skill .big-item-box .item2 {
-  float: right;
+  left: 37%;
+  top: 0%;
+  animation: bubble 5.5s infinite alternate;
 }
-.skill .item-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 6vh;
+.skill .big-item-box .item3 {
+  left: 85%;
+  top: 30%;
+  animation: bubble 6s infinite alternate;
 }
+
 .skill .item-box .text-box {
-  margin-right: 5vw;
+  padding: 1vw;
 }
 .skill p {
   font-family: "Noto";
-  font-size: 1.5vw;
+  font-size: 1.3vw;
+  margin-bottom: 0;
+}
+.skill .img-box {
+  padding: 1vw;
+  background-color: rgba(41, 53, 220, 0.05);
 }
 .skill .img-box img {
   margin: 0 1vw;
-  width: 6vw;
-  height: 6vw;
+  width: 5vw;
+  height: 5vw;
+}
+.skill .item-box .link-box {
+  position: relative;
+  cursor: pointer;
+  height: 3.5vw;
+  overflow: hidden;
+}
+.skill .item-box .link-box p {
+  font-family: "Robo";
+  font-size: 2vw;
+  margin: 0 auto 0 0.4vw;
+}
+.skill .item-box .link-box .hover-bar {
+  position: absolute;
+  left: -100%;
+  width: 70%;
+  height: 0.2vw;
+  transition: 0.2s;
+}
+.skill .item-box .link-box:hover .hover-bar {
+  transform: translateX(100%);
+  background-color: rgb(71, 77, 168);
 }
 
-.skill button {
-  font-size: 1.3vw;
+@keyframes bubble {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-4vh);
+  }
 }
