update my portfolio
add footer /
add link to video

--- a/my_project/my_portfolio/css/nav.css
+++ b/my_project/my_portfolio/css/nav.css
@@ -64,7 +64,7 @@
   background-color: darkviolet;
 }
 #navbar-scrollspy ul li .active .color8 {
-  background-color: #d2ff1f;
+  background-color: #4d58cb;
 }
 #navbar-scrollspy ul li .active p {
   opacity: 1;
