--- a/my_project/my_portfolio/css/header.css
+++ b/my_project/my_portfolio/css/header.css
@@ -3,6 +3,11 @@
   src: url(../../font/KungFu/KungFuMasterLeftalic-nRjBV.otf);
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .header-box {
   position: absolute;
   top: 0;
@@ -46,20 +51,9 @@
 .header-box .ani5 {
   animation-name: five;
 }
-.header-box ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 5vw 0 0;
-}
-.header-box ul li {
-  width: 8vw;
-  font-size: 1vw;
-  padding: 0;
-}
 
 .header-box .header-nav {
+  list-style: none;
   display: flex;
   width: 35vw;
   justify-content: space-around;
@@ -152,5 +146,38 @@
   }
   100% {
     transform: translateY(-2vh);
+  }
+}
+
+@media (max-width: 768px) {
+  .header-box h2 {
+    padding-left: 15vw;
+    margin: 0;
+    font-size: 3vw;
+  }
+  .header-box .ani-block {
+    position: absolute;
+    top: 50%;
+    left: 5vw;
+    width: 5vw;
+    height: 0.8vw;
+    background-color: white;
+
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+  }
+  .header-box .header-nav {
+    display: none;
+  }
+
+  .header .text-box .head-right {
+    text-align: right;
+  }
+  .header .text-box h2 {
+    font-size: 10vw;
+    margin: 5vh 0;
+  }
+  .header span {
+    font-size: 11vw;
   }
 }
