--- a/my_project/my_portfolio/css/info.css
+++ b/my_project/my_portfolio/css/info.css
@@ -7,6 +7,10 @@
   src: url(../../font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
 }
 
+.info {
+  height: 120vh;
+}
+
 .left-top {
   top: 0;
   left: 0;
@@ -18,6 +22,7 @@
 .left-bottom {
   bottom: 0;
   left: 0;
+  position: relative;
 }
 .right-bottom {
   bottom: 0;
@@ -32,7 +37,7 @@
 .info .inner-box {
   position: absolute;
   width: 50%;
-  height: 50%;
+  height: 40%;
 }
 .info .text-box {
   text-align: left;
@@ -62,16 +67,27 @@
   height: 16vw;
   border-radius: 8vw;
   background-color: white;
+  box-shadow: 0.2vw 0.2vw 0.3vw #333333;
 
   animation: bubble 1.5s infinite alternate;
 }
 
 /* info third */
+.info .img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+}
 .info .img-box .my-img {
   width: 10vw;
   height: 10vw;
   border-radius: 5vw;
   background-color: white;
+  box-shadow: 0.2vw 0.2vw 0.3vw #333333;
   margin: 1vw;
 }
 .info .img-box .img1 {
@@ -90,5 +106,62 @@
   }
   100% {
     transform: translateY(-4vh);
+  }
+}
+
+@media (max-width: 768px) {
+  .left-top {
+    top: 0;
+    left: 0;
+  }
+  .right-top {
+    display: none;
+  }
+  .left-bottom {
+    top: 50%;
+    left: 5%;
+  }
+  .right-bottom {
+    top: 30%;
+    right: 5%;
+  }
+  .info .inner-box {
+    position: absolute;
+    width: 80%;
+  }
+  .info .text-box {
+    padding: 0;
+  }
+  .info .text-box h2 {
+    font-size: 5vw;
+    margin-bottom: 3vh;
+  }
+  .info .text-box p {
+    font-size: 4vw;
+    margin-bottom: 1vh;
+  }
+  .info .img-box .my-img {
+    width: 24vw;
+    height: 24vw;
+    border-radius: 12vw;
+    margin: 3vw;
+  }
+  .info .img-box .img1 {
+    animation: bubble2 1.7s infinite alternate;
+  }
+  .info .img-box .img2 {
+    animation: bubble2 1.4s infinite alternate;
+  }
+  .info .img-box .img3 {
+    animation: bubble2 2s infinite alternate;
+  }
+
+  @keyframes bubble2 {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-2vh);
+    }
   }
 }
