--- a/my_project/my_portfolio/css/footer.css
+++ b/my_project/my_portfolio/css/footer.css
@@ -22,10 +22,10 @@
 }
 .footer .footer-inner {
   position: absolute;
-  width: 70vw;
+  width: 80vw;
   height: 80vh;
   top: 10vh;
-  left: 10vw;
+  left: 7vw;
 }
 
 .footer .img-box {
@@ -46,13 +46,49 @@
   width: 12vw;
   height: 20vh;
   margin: 2vw 1vw;
-  box-shadow: 0.2vw 0.2vw 0.4vw #333333;
+  box-shadow: 0.1vw 0.1vw 0.2vw #333333;
   background-color: white;
+  background-size: cover;
+  background-position: center;
+}
+.footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(1) {
+  background-image: url(../img/footerImg/imagetext.png);
+  width: 20vw;
+  height: 24vh;
+}
+.footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(2) {
+  background-image: url(../img/footerImg/median.png);
+  width: 20vw;
+  height: 24vh;
+}
+.footer .img-box .sm-img-box:nth-child(1) .item-box:nth-child(3) {
+  background-image: url(../img/footerImg/exampl.png);
+  width: 20vw;
+  height: 24vh;
+}
+.footer .img-box .sm-img-box:nth-child(1) .item-box {
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.footer .img-box .sm-img-box:nth-child(2) .item-box:nth-child(1) {
+  background-image: url(../img/footerImg/Mockup.png);
+}
+.footer .img-box .sm-img-box:nth-child(2) .item-box:nth-child(2) {
+  background-image: url(../img/footerImg/car.jpg);
+}
+.footer .img-box .sm-img-box:nth-child(2) .item-box:nth-child(3) {
+  background-image: url(../img/footerImg/comp2.png);
+}
+.footer .img-box .sm-img-box:nth-child(3) .item-box:nth-child(1) {
+  background-image: url(../img/footerImg/adui.jpg);
+}
+.footer .img-box .sm-img-box:nth-child(3) .item-box:nth-child(2) {
+  background-image: url(../img/footerImg/computer.png);
 }
 
 .footer .text-box {
   position: absolute;
-  right: -5vw;
+  right: 0;
   top: 45%;
 }
 .footer .text-box p {
